--- a/app/views/public_pages/home.html.erb
+++ b/app/views/public_pages/home.html.erb
@@ -1,4 +1,6 @@
-<div id="coming-soon" class="round center-block center-txt">
+<div id="coming-soon" class="big-txt italic light-gray-txt center-block center-txt">Coming summer 2011!</div>
+
+<div id="intro" class="round center-block center-txt">
 	<div id="coming-soon-title" class="big-txt black-txt underline">Check the Crisis</div>
 
 	<p>
@@ -6,8 +8,8 @@
 		<span class="emph-txt">checkthecrisis.com</span> will give a voice to your checking account.  
 		<span class="emph-txt">By moving your deposits</span>
 		from abusive and careless mortgagees to those diligently and cooperatively working to keep mortgagors out of foreclosure,
-		you can make a statement that banks will perceive not only symbolically, but also financially.  
-		<span class="emph-txt">Checkthecrisis.com</span> will facilitate this migration by 
+		you can make a statement that banks will perceive not only symbolically, but also financially.
+		<span class="emph-txt">Checkthecrisis.com</span> will facilitate the migration by  
 		<span class="emph-txt">lifting the veil on HAMP compliance</span>
 		and revealing both the <span class="emph-txt">data and stories</span> behind the foreclosure processes afflicting millions
 		of people nationwide.
@@ -16,7 +18,7 @@
 	<p>
 		Please stay tuned for our <span class="emph-txt">launch in the early summer</span>.  It's time now to take a stand against
 		the <span class="emph-txt">abusive, careless, and often illegal practices</span> of mortgage holding financial 
-		institutions that are perpetuating the current foreclosure.
+		institutions that are perpetuating the current foreclosure crisis.
 		By strategically depositing our money, perhaps together we can finally&#151;hopefully&#151;<span class="emph-txt">check the crisis</span>.
 		    		
 	</p>
