--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -6,8 +6,14 @@ body {
 }
 
 #coming-soon {
+  margin-top: 120px;
+  margin-bottom: 40px;
+  color: white;
+  
+}
+
+#intro {
   background: #fff;
-  margin-top: 200px;
   padding: 10px 50px;
   border: 2px solid #999;
 }
@@ -58,6 +64,10 @@ body {
 
 .underline {
   text-decoration: underline;
+}
+
+.italic {
+  font-style: italic;
 }
 
 .bold {
