Minor textual change

--- a/app/views/public_pages/home.html.erb
+++ b/app/views/public_pages/home.html.erb
@@ -4,7 +4,8 @@
 	<div id="coming-soon-title" class="big-txt black-txt underline">Check the Crisis</div>
 
 	<p>
-		<span class="emph-txt">Coming soon</span> from the <span class="emph-txt">Yale Law School Mortgage Foreclosure Clinic</span>, 
+		<span class="emph-txt">Coming soon</span> from the <span class="emph-txt">Yale Law School Mortgage Foreclosure Litigation
+		Clinic</span>, 
 		<span class="emph-txt">checkthecrisis.com</span> will give a voice to your checking account.  
 		<span class="emph-txt">By moving your deposits</span>
 		from abusive and careless mortgagees to those diligently and cooperatively working to keep mortgagors out of foreclosure,
