Small textual change

--- a/app/views/public_pages/home.html.erb
+++ b/app/views/public_pages/home.html.erb
@@ -17,7 +17,7 @@
 	</p>
 	
 	<p>
-		Please stay tuned for our <span class="emph-txt">launch in the early summer</span>.  It's time now to take a stand against
+		Please stay tuned for our <span class="emph-txt">launch in summer / fall 2011</span>.  It's time now to take a stand against
 		the <span class="emph-txt">abusive, careless, and often illegal practices</span> of mortgage holding financial 
 		institutions that are perpetuating the current foreclosure crisis.
 		By strategically depositing our money, perhaps together we can finally&#151;hopefully&#151;<span class="emph-txt">check the crisis</span>.
